federation/commands/yamls/region-man/region-man-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: region-man
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      nodePort: 30040
  selector:
    app: region-man
  type: NodePort
